[project]
name = "propelauth-django-rest-framework"
version = "4.4.0"
description = "A library for managing authentication in Django Rest Framework"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "PropelAuth", email = "support@propelauth.com" }]
dependencies = [
    "django",
    "djangorestframework",
    "propelauth-py==4.4.0",
    "requests",
    "httpx>=0.28.1",
]

[project.urls]
Homepage = "https://github.com/propelauth/propelauth-django-rest-framework"

[dependency-groups]
dev = [
    "pytest",
    "requests-mock",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
no-build = false

[tool.hatch.build.targets.wheel]
packages = ["propelauth_django_rest_framework"]
